syntax = "proto3";

package ibans;

import "common/errors.proto";
import "common/numbers.proto";
import "common/statuses.proto";
import "countries/countries.proto";
import "google/protobuf/timestamp.proto";

enum Algorithm {
  ALGORITHM_UNSPECIFIED = 0;
  ALGORITHM_ISO_7064_MOD_97_10 = 1;
  ALGORITHM_ISO_7064_MOD_97_10_V = 2;
  ALGORITHM_ISO_7064_MOD_11_10 = 3;
  ALGORITHM_WEIGHTED = 4;
  ALGORITHM_LUHN = 5;
  ALGORITHM_CONVERSION_SUM = 6;
}

message AlgorithmList {
  repeated Algorithm list = 1;
}

// Backed by table 'ibans'
message IBAN {
  string id = 1; // System Key: id is generated by the server or the database
  countries.Country country = 2; // country + valid_from form the Human-Readable Key (unique identifier)
  google.protobuf.Timestamp valid_from = 3; // country + valid_from form the Human-Readable Key (unique identifier)
  Algorithm algorithm = 4;
  string format = 5;
  optional string weights = 6;
  optional string modulo = 7;
  optional string complement = 8;
  optional string method = 9;
  common.Status status = 10;
}

message List {
  repeated IBAN list = 1;
}

message CountryValidity {
  countries.Select country = 1;
  google.protobuf.Timestamp valid_from = 2;
}

message Select {
  oneof select {
    string by_id = 1;
    CountryValidity by_country_validity = 2;
  }
}

message SelectList {
  repeated Select list = 1;
}

message CreateRequest {
  countries.Select country = 1;
  optional google.protobuf.Timestamp validity = 2;
  Algorithm algorithm = 3;
  string format = 4;
  optional string weights = 5;
  optional string modulo = 6;
  optional string complement = 7;
  optional string method = 8;
  optional common.Status status = 9; // Default: 0 (STATUS_UNSPECIFIED)
}

message CreateResponse {
  oneof response {
    common.Error error = 1;
    IBAN iban = 2;
  }
}

message UpdateRequest {
  oneof select {
    string by_id = 1;
    CountryValidity by_country_validity = 2;
  }
  optional countries.Select country = 3;
  optional google.protobuf.Timestamp validity = 4;
  optional Algorithm algorithm = 5;
  optional string format = 6;
  optional string weights = 7;
  optional string modulo = 8;
  optional string complement = 9;
  optional string method = 10;
  optional common.Status status = 11; // Default: 0 (STATUS_UNSPECIFIED)
}

message UpdateResponse {
  oneof response {
    common.Error error = 1;
    IBAN iban = 2;
  }
}

message GetRequest {
  Select select  = 1;
}

message GetResponse {
  oneof response {
    common.Error error = 1;
    IBAN iban = 2;
  }
}

// GetList will use SQL 'LIKE' instead of '=' for string fields
message GetListRequest {
  optional countries.GetListRequest country = 1;
  optional common.TimestampValueList validity = 2;
  optional AlgorithmList algorithm = 3;
  optional string format = 4;
  optional string weights = 5;
  optional string modulo = 6;
  optional string complement = 7;
  optional string method = 8;
  optional common.StatusList status = 9;
}

message GetListResponse { // ListResponse is formatted for streaming
  oneof response {
    common.Error error = 1;
    IBAN iban = 2;
  }
}

// A delete request is just an update request with status set to TERMINATED.
message DeleteRequest {
  oneof select {
    string by_id = 1;
    CountryValidity by_country_validity = 2;
  }
}

message DeleteResponse {
  oneof response {
    common.Error error = 1;
    IBAN iban = 2;
  }
}
